icons still dont work

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,34 @@
+*,  {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #1a1b1c;
+  color: #fff;
+  display: flex;
+  justify-content: center
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container{
+  background: #1a1b1c;
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+    justify-items: left;
+    max-width: 1500px;
+    padding: 20px 0 0 8%;
 }
