--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,4 @@
-*,  {
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -23,12 +23,12 @@ code {
     monospace;
 }
 
-.container{
+#container{
   background: #1a1b1c;
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
     flex-wrap: wrap;
     justify-items: left;
-    max-width: 1500px;
-    padding: 20px 0 0 8%;
+    max-width: 1300px;
+    padding: 15px 0 0 0;
 }
