styling almost how it should it

--- a/code/src/Album.css
+++ b/code/src/Album.css
@@ -35,9 +35,8 @@ header {
 /*card*/
 .albumCard {
  
-  display: flex;
+  position: relative;
   flex-direction: column;
-  height: 100%;
   width: 300px;
   z-index: 1;
   justify-content: center;
@@ -45,8 +44,8 @@ header {
 }
 
 
-.albumCard:hover .albumIcons img {
-  display: inline-flex;
+.albumCard:hover .albumIcons img{
+  display: block;
 }
 
 .albumCoverImage img {
@@ -70,25 +69,26 @@ header {
   display: grid;
   grid-template-columns: 100px 100px 100px;
   z-index: 3;
-  height: 100%;
-  width: 300px;
+  position: relative; 
  
 }
 
 .albumIcons:hover~.albumCoverImage img {
-  filter:brightness(30%);
+  filter:brightness(40%);
   background: rgba(0, 0, 0, 0.253)
 }
 
 .favIcon, .iconPlay, .moreIcon {
-  align-self: center;
-  justify-self: center;
-  display: none; 
-  position: relative;
+  display: none;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0,0,0,0.5);
 }
 
 .favIcon {
-  
   height: 80px;
   width: 80px;
 }
@@ -108,12 +108,12 @@ header {
   transform: scale(1.1);
 }
 
-/* .moreIcon:hover {
+/.moreIcon:hover {
   width: 80px;
   height: 80px;
   opacity: 1.0;
   filter: alpha(opacity=100);
-} */
+} 
 
 
 .albumTitle .albumTitle {
